{
  "version": 4,
  "terraform_version": "1.4.5",
  "serial": 29,
  "lineage": "4e18f33e-cef3-52b2-4cca-9e287f3b9c12",
  "resources": [
    {
      "module": "module.vpc-01",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "module.vpc-01.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03be44fc59cb48225",
            "domain": "vpc",
            "id": "eipalloc-03be44fc59cb48225",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-23-20-194-56.compute-1.amazonaws.com",
            "public_ip": "23.20.194.56",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "2560-dev-del-eip-1-us-east-1a",
              "cloud_provider": "aws",
              "create_by": "Terraform",
              "environment": "dev",
              "id": "2560",
              "owner": "DevOps Easy Learning",
              "project": "del",
              "teams": "DEL"
            },
            "tags_all": {
              "Name": "2560-dev-del-eip-1-us-east-1a",
              "cloud_provider": "aws",
              "create_by": "Terraform",
              "environment": "dev",
              "id": "2560",
              "owner": "DevOps Easy Learning",
              "project": "del",
              "teams": "DEL"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e95354879768ddec",
            "domain": "vpc",
            "id": "eipalloc-0e95354879768ddec",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-215-46-239.compute-1.amazonaws.com",
            "public_ip": "3.215.46.239",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "2560-dev-del-eip-2-us-east-1b",
              "cloud_provider": "aws",
              "create_by": "Terraform",
              "environment": "dev",
              "id": "2560",
              "owner": "DevOps Easy Learning",
              "project": "del",
              "teams": "DEL"
            },
            "tags_all": {
              "Name": "2560-dev-del-eip-2-us-east-1b",
              "cloud_provider": "aws",
              "create_by": "Terraform",
              "environment": "dev",
              "id": "2560",
              "owner": "DevOps Easy Learning",
              "project": "del",
              "teams": "DEL"
            },
            "vpc": true
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03f19e626e12e181c",
            "domain": "vpc",
            "id": "eipalloc-03f19e626e12e181c",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-164-201-208.compute-1.amazonaws.com",
            "public_ip": "54.164.201.208",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "2560-dev-del-eip-3-us-east-1c",
              "cloud_provider": "aws",
              "create_by": "Terraform",
              "environment": "dev",
              "id": "2560",
              "owner": "DevOps Easy Learning",
              "project": "del",
              "teams": "DEL"
            },
            "tags_all": {
              "Name": "2560-dev-del-eip-3-us-east-1c",
              "cloud_provider": "aws",
              "create_by": "Terraform",
              "environment": "dev",
              "id": "2560",
              "owner": "DevOps Easy Learning",
              "project": "del",
              "teams": "DEL"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc-01",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "module.vpc-01.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:462792239034:internet-gateway/igw-0dc81862405e64ebb",
            "id": "igw-0dc81862405e64ebb",
            "owner_id": "462792239034",
            "tags": {
              "Name": "2560-dev-del-internet-gateway",
              "cloud_provider": "aws",
              "create_by": "Terraform",
              "environment": "dev",
              "id": "2560",
              "owner": "DevOps Easy Learning",
              "project": "del",
              "teams": "DEL"
            },
            "tags_all": {
              "Name": "2560-dev-del-internet-gateway",
              "cloud_provider": "aws",
              "create_by": "Terraform",
              "environment": "dev",
              "id": "2560",
              "owner": "DevOps Easy Learning",
              "project": "del",
              "teams": "DEL"
            },
            "vpc_id": "vpc-0d6d0dc9e14e4db28"
          },
          "dependencies": [
            "module.vpc-01.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-01",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "module.vpc-01.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03be44fc59cb48225",
            "association_id": "eipassoc-018b2b14cfab7093a",
            "connectivity_type": "public",
            "id": "nat-058dfbaae97bca8a2",
            "network_interface_id": "eni-0510c87ca7bc3c315",
            "private_ip": "10.10.0.64",
            "public_ip": "23.20.194.56",
            "subnet_id": "subnet-092473fedc7bcc549",
            "tags": {
              "Name": "2560-dev-del-nat-1-us-east-1a",
              "cloud_provider": "aws",
              "create_by": "Terraform",
              "environment": "dev",
              "id": "2560",
              "owner": "DevOps Easy Learning",
              "project": "del",
              "teams": "DEL"
            },
            "tags_all": {
              "Name": "2560-dev-del-nat-1-us-east-1a",
              "cloud_provider": "aws",
              "create_by": "Terraform",
              "environment": "dev",
              "id": "2560",
              "owner": "DevOps Easy Learning",
              "project": "del",
              "teams": "DEL"
            }
          },
          "dependencies": [
            "module.vpc-01.aws_eip.nat",
            "module.vpc-01.aws_subnet.public",
            "module.vpc-01.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e95354879768ddec",
            "association_id": "eipassoc-0db6d6aea69ee9f26",
            "connectivity_type": "public",
            "id": "nat-0069210e76dff59fa",
            "network_interface_id": "eni-0f9d9a7d8de3d0b2e",
            "private_ip": "10.10.1.26",
            "public_ip": "3.215.46.239",
            "subnet_id": "subnet-0673494679b8bc7e7",
            "tags": {
              "Name": "2560-dev-del-nat-2-us-east-1b",
              "cloud_provider": "aws",
              "create_by": "Terraform",
              "environment": "dev",
              "id": "2560",
              "owner": "DevOps Easy Learning",
              "project": "del",
              "teams": "DEL"
            },
            "tags_all": {
              "Name": "2560-dev-del-nat-2-us-east-1b",
              "cloud_provider": "aws",
              "create_by": "Terraform",
              "environment": "dev",
              "id": "2560",
              "owner": "DevOps Easy Learning",
              "project": "del",
              "teams": "DEL"
            }
          },
          "dependencies": [
            "module.vpc-01.aws_eip.nat",
            "module.vpc-01.aws_subnet.public",
            "module.vpc-01.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03f19e626e12e181c",
            "association_id": "eipassoc-091d0b4d321bf2a6f",
            "connectivity_type": "public",
            "id": "nat-04b2e03f9249f6940",
            "network_interface_id": "eni-0ce038d5cb2f0b55e",
            "private_ip": "10.10.2.179",
            "public_ip": "54.164.201.208",
            "subnet_id": "subnet-0ff8bfce5224efe5d",
            "tags": {
              "Name": "2560-dev-del-nat-3-us-east-1c",
              "cloud_provider": "aws",
              "create_by": "Terraform",
              "environment": "dev",
              "id": "2560",
              "owner": "DevOps Easy Learning",
              "project": "del",
              "teams": "DEL"
            },
            "tags_all": {
              "Name": "2560-dev-del-nat-3-us-east-1c",
              "cloud_provider": "aws",
              "create_by": "Terraform",
              "environment": "dev",
              "id": "2560",
              "owner": "DevOps Easy Learning",
              "project": "del",
              "teams": "DEL"
            }
          },
          "dependencies": [
            "module.vpc-01.aws_eip.nat",
            "module.vpc-01.aws_subnet.public",
            "module.vpc-01.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-01",
      "mode": "managed",
      "type": "aws_route",
      "name": "nat_gateway",
      "provider": "module.vpc-01.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0106d1e338852af341080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-058dfbaae97bca8a2",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0106d1e338852af34",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-01.aws_eip.nat",
            "module.vpc-01.aws_nat_gateway.main",
            "module.vpc-01.aws_route_table.private",
            "module.vpc-01.aws_subnet.public",
            "module.vpc-01.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-04c618d2e7fd703b91080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0069210e76dff59fa",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04c618d2e7fd703b9",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-01.aws_eip.nat",
            "module.vpc-01.aws_nat_gateway.main",
            "module.vpc-01.aws_route_table.private",
            "module.vpc-01.aws_subnet.public",
            "module.vpc-01.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0c3a4d84d80be078e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-04b2e03f9249f6940",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c3a4d84d80be078e",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-01.aws_eip.nat",
            "module.vpc-01.aws_nat_gateway.main",
            "module.vpc-01.aws_route_table.private",
            "module.vpc-01.aws_subnet.public",
            "module.vpc-01.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-01",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "module.vpc-01.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0dc81862405e64ebb",
            "id": "r-rtb-0b6d2aa22e8b412d01080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b6d2aa22e8b412d0",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-01.aws_internet_gateway.main",
            "module.vpc-01.aws_route_table.public",
            "module.vpc-01.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-01",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "module.vpc-01.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:462792239034:route-table/rtb-0106d1e338852af34",
            "id": "rtb-0106d1e338852af34",
            "owner_id": "462792239034",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "2560-dev-del-private-route-table-1-us-east-1a",
              "cloud_provider": "aws",
              "create_by": "Terraform",
              "environment": "dev",
              "id": "2560",
              "owner": "DevOps Easy Learning",
              "project": "del",
              "teams": "DEL"
            },
            "tags_all": {
              "Name": "2560-dev-del-private-route-table-1-us-east-1a",
              "cloud_provider": "aws",
              "create_by": "Terraform",
              "environment": "dev",
              "id": "2560",
              "owner": "DevOps Easy Learning",
              "project": "del",
              "teams": "DEL"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d6d0dc9e14e4db28"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-01.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:462792239034:route-table/rtb-04c618d2e7fd703b9",
            "id": "rtb-04c618d2e7fd703b9",
            "owner_id": "462792239034",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "2560-dev-del-private-route-table-2-us-east-1b",
              "cloud_provider": "aws",
              "create_by": "Terraform",
              "environment": "dev",
              "id": "2560",
              "owner": "DevOps Easy Learning",
              "project": "del",
              "teams": "DEL"
            },
            "tags_all": {
              "Name": "2560-dev-del-private-route-table-2-us-east-1b",
              "cloud_provider": "aws",
              "create_by": "Terraform",
              "environment": "dev",
              "id": "2560",
              "owner": "DevOps Easy Learning",
              "project": "del",
              "teams": "DEL"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d6d0dc9e14e4db28"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-01.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:462792239034:route-table/rtb-0c3a4d84d80be078e",
            "id": "rtb-0c3a4d84d80be078e",
            "owner_id": "462792239034",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "2560-dev-del-private-route-table-3-us-east-1c",
              "cloud_provider": "aws",
              "create_by": "Terraform",
              "environment": "dev",
              "id": "2560",
              "owner": "DevOps Easy Learning",
              "project": "del",
              "teams": "DEL"
            },
            "tags_all": {
              "Name": "2560-dev-del-private-route-table-3-us-east-1c",
              "cloud_provider": "aws",
              "create_by": "Terraform",
              "environment": "dev",
              "id": "2560",
              "owner": "DevOps Easy Learning",
              "project": "del",
              "teams": "DEL"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d6d0dc9e14e4db28"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-01.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-01",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "module.vpc-01.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:462792239034:route-table/rtb-0b6d2aa22e8b412d0",
            "id": "rtb-0b6d2aa22e8b412d0",
            "owner_id": "462792239034",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "2560-dev-del-public-route-table",
              "cloud_provider": "aws",
              "create_by": "Terraform",
              "environment": "dev",
              "id": "2560",
              "owner": "DevOps Easy Learning",
              "project": "del",
              "teams": "DEL"
            },
            "tags_all": {
              "Name": "2560-dev-del-public-route-table",
              "cloud_provider": "aws",
              "create_by": "Terraform",
              "environment": "dev",
              "id": "2560",
              "owner": "DevOps Easy Learning",
              "project": "del",
              "teams": "DEL"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d6d0dc9e14e4db28"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-01.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-01",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "module.vpc-01.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-017cb5524a3dc53c5",
            "route_table_id": "rtb-0106d1e338852af34",
            "subnet_id": "subnet-026d23b92c4cafd4d"
          },
          "dependencies": [
            "module.vpc-01.aws_route_table.private",
            "module.vpc-01.aws_subnet.private",
            "module.vpc-01.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d5e2bbddbc63795c",
            "route_table_id": "rtb-04c618d2e7fd703b9",
            "subnet_id": "subnet-0d6c5f1c0072657b7"
          },
          "dependencies": [
            "module.vpc-01.aws_route_table.private",
            "module.vpc-01.aws_subnet.private",
            "module.vpc-01.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e4cb9c3fe5ebbdb1",
            "route_table_id": "rtb-0c3a4d84d80be078e",
            "subnet_id": "subnet-091a0d946e5637a53"
          },
          "dependencies": [
            "module.vpc-01.aws_route_table.private",
            "module.vpc-01.aws_subnet.private",
            "module.vpc-01.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-01",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "module.vpc-01.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ec301255e5457c39",
            "route_table_id": "rtb-0b6d2aa22e8b412d0",
            "subnet_id": "subnet-092473fedc7bcc549"
          },
          "dependencies": [
            "module.vpc-01.aws_route_table.public",
            "module.vpc-01.aws_subnet.public",
            "module.vpc-01.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06631e99794055ecd",
            "route_table_id": "rtb-0b6d2aa22e8b412d0",
            "subnet_id": "subnet-0673494679b8bc7e7"
          },
          "dependencies": [
            "module.vpc-01.aws_route_table.public",
            "module.vpc-01.aws_subnet.public",
            "module.vpc-01.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-049b8029cf0360953",
            "route_table_id": "rtb-0b6d2aa22e8b412d0",
            "subnet_id": "subnet-0ff8bfce5224efe5d"
          },
          "dependencies": [
            "module.vpc-01.aws_route_table.public",
            "module.vpc-01.aws_subnet.public",
            "module.vpc-01.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-01",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "module.vpc-01.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:462792239034:subnet/subnet-026d23b92c4cafd4d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.10.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-026d23b92c4cafd4d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "462792239034",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "2560-dev-del-private-subnet-1-us-east-1a",
              "cloud_provider": "aws",
              "create_by": "Terraform",
              "environment": "dev",
              "id": "2560",
              "kubernetes.io/cluster/2560-dev-del": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "owner": "DevOps Easy Learning",
              "project": "del",
              "teams": "DEL"
            },
            "tags_all": {
              "Name": "2560-dev-del-private-subnet-1-us-east-1a",
              "cloud_provider": "aws",
              "create_by": "Terraform",
              "environment": "dev",
              "id": "2560",
              "kubernetes.io/cluster/2560-dev-del": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "owner": "DevOps Easy Learning",
              "project": "del",
              "teams": "DEL"
            },
            "vpc_id": "vpc-0d6d0dc9e14e4db28"
          },
          "dependencies": [
            "module.vpc-01.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:462792239034:subnet/subnet-0d6c5f1c0072657b7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.10.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d6c5f1c0072657b7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "462792239034",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "2560-dev-del-private-subnet-2-us-east-1b",
              "cloud_provider": "aws",
              "create_by": "Terraform",
              "environment": "dev",
              "id": "2560",
              "kubernetes.io/cluster/2560-dev-del": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "owner": "DevOps Easy Learning",
              "project": "del",
              "teams": "DEL"
            },
            "tags_all": {
              "Name": "2560-dev-del-private-subnet-2-us-east-1b",
              "cloud_provider": "aws",
              "create_by": "Terraform",
              "environment": "dev",
              "id": "2560",
              "kubernetes.io/cluster/2560-dev-del": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "owner": "DevOps Easy Learning",
              "project": "del",
              "teams": "DEL"
            },
            "vpc_id": "vpc-0d6d0dc9e14e4db28"
          },
          "dependencies": [
            "module.vpc-01.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:462792239034:subnet/subnet-091a0d946e5637a53",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.10.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-091a0d946e5637a53",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "462792239034",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "2560-dev-del-private-subnet-3-us-east-1c",
              "cloud_provider": "aws",
              "create_by": "Terraform",
              "environment": "dev",
              "id": "2560",
              "kubernetes.io/cluster/2560-dev-del": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "owner": "DevOps Easy Learning",
              "project": "del",
              "teams": "DEL"
            },
            "tags_all": {
              "Name": "2560-dev-del-private-subnet-3-us-east-1c",
              "cloud_provider": "aws",
              "create_by": "Terraform",
              "environment": "dev",
              "id": "2560",
              "kubernetes.io/cluster/2560-dev-del": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "owner": "DevOps Easy Learning",
              "project": "del",
              "teams": "DEL"
            },
            "vpc_id": "vpc-0d6d0dc9e14e4db28"
          },
          "dependencies": [
            "module.vpc-01.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-01",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "module.vpc-01.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:462792239034:subnet/subnet-092473fedc7bcc549",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.10.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-092473fedc7bcc549",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "462792239034",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "2560-dev-del-public-subnet-1-us-east-1a",
              "cloud_provider": "aws",
              "create_by": "Terraform",
              "environment": "dev",
              "id": "2560",
              "kubernetes.io/cluster/2560-dev-del": "shared",
              "kubernetes.io/role/elb": "1",
              "owner": "DevOps Easy Learning",
              "project": "del",
              "teams": "DEL"
            },
            "tags_all": {
              "Name": "2560-dev-del-public-subnet-1-us-east-1a",
              "cloud_provider": "aws",
              "create_by": "Terraform",
              "environment": "dev",
              "id": "2560",
              "kubernetes.io/cluster/2560-dev-del": "shared",
              "kubernetes.io/role/elb": "1",
              "owner": "DevOps Easy Learning",
              "project": "del",
              "teams": "DEL"
            },
            "vpc_id": "vpc-0d6d0dc9e14e4db28"
          },
          "dependencies": [
            "module.vpc-01.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:462792239034:subnet/subnet-0673494679b8bc7e7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0673494679b8bc7e7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "462792239034",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "2560-dev-del-public-subnet-2-us-east-1b",
              "cloud_provider": "aws",
              "create_by": "Terraform",
              "environment": "dev",
              "id": "2560",
              "kubernetes.io/cluster/2560-dev-del": "shared",
              "kubernetes.io/role/elb": "1",
              "owner": "DevOps Easy Learning",
              "project": "del",
              "teams": "DEL"
            },
            "tags_all": {
              "Name": "2560-dev-del-public-subnet-2-us-east-1b",
              "cloud_provider": "aws",
              "create_by": "Terraform",
              "environment": "dev",
              "id": "2560",
              "kubernetes.io/cluster/2560-dev-del": "shared",
              "kubernetes.io/role/elb": "1",
              "owner": "DevOps Easy Learning",
              "project": "del",
              "teams": "DEL"
            },
            "vpc_id": "vpc-0d6d0dc9e14e4db28"
          },
          "dependencies": [
            "module.vpc-01.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:462792239034:subnet/subnet-0ff8bfce5224efe5d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.10.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ff8bfce5224efe5d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "462792239034",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "2560-dev-del-public-subnet-3-us-east-1c",
              "cloud_provider": "aws",
              "create_by": "Terraform",
              "environment": "dev",
              "id": "2560",
              "kubernetes.io/cluster/2560-dev-del": "shared",
              "kubernetes.io/role/elb": "1",
              "owner": "DevOps Easy Learning",
              "project": "del",
              "teams": "DEL"
            },
            "tags_all": {
              "Name": "2560-dev-del-public-subnet-3-us-east-1c",
              "cloud_provider": "aws",
              "create_by": "Terraform",
              "environment": "dev",
              "id": "2560",
              "kubernetes.io/cluster/2560-dev-del": "shared",
              "kubernetes.io/role/elb": "1",
              "owner": "DevOps Easy Learning",
              "project": "del",
              "teams": "DEL"
            },
            "vpc_id": "vpc-0d6d0dc9e14e4db28"
          },
          "dependencies": [
            "module.vpc-01.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-01",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "module.vpc-01.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:462792239034:vpc/vpc-0d6d0dc9e14e4db28",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-00085fa4f908bead2",
            "default_route_table_id": "rtb-0ddb7ab60b072357e",
            "default_security_group_id": "sg-0f32a898f71732350",
            "dhcp_options_id": "dopt-00cefed598a1a5681",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d6d0dc9e14e4db28",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ddb7ab60b072357e",
            "owner_id": "462792239034",
            "tags": {
              "Name": "2560-dev-del-vpc",
              "cloud_provider": "aws",
              "create_by": "Terraform",
              "environment": "dev",
              "id": "2560",
              "owner": "DevOps Easy Learning",
              "project": "del",
              "teams": "DEL"
            },
            "tags_all": {
              "Name": "2560-dev-del-vpc",
              "cloud_provider": "aws",
              "create_by": "Terraform",
              "environment": "dev",
              "id": "2560",
              "owner": "DevOps Easy Learning",
              "project": "del",
              "teams": "DEL"
            }
          }
        }
      ]
    }
  ]
}